fix scrollbar for firefox
first and maybe last fix for firefox, too many "modern" features that for some reason requires a lot of specific things for firefox

--- a/core/css/configuration.css
+++ b/core/css/configuration.css
@@ -39,6 +39,11 @@ html, body {
   display: none;
 }
 
+@-moz-document url-prefix() {
+  #ccm-host_list {
+    scrollbar-width: none;
+  }
+}
 
 /* .ccm-flexbox_wrap {
   display: flex;
